Implement suggestions by KP

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -438,6 +438,26 @@
   publisher={Cambridge University Press}
 }
 
+@article{phillips2006erp,
+  title={ERP measures of auditory word repetition and translation priming in bilinguals},
+  author={Phillips, Natalie A and Klein, Denise and Mercier, Julie and de Boysson, Chlo{\'e}},
+  journal={Brain Research},
+  volume={1125},
+  number={1},
+  pages={116--131},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{andras2022cognate,
+  title={Cognate facilitation effect during auditory comprehension of a second language: A visual world eye-tracking study},
+  author={Andras, Filip and Rivera, Marta and Bajo, Teresa and Dussias, Paola E and Paolieri, Daniela},
+  journal={International Journal of Bilingualism},
+  pages={13670069211033359},
+  year={2022},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
 @article{hirosh2021novel,
   title={Novel Word Learning Among Bilinguals Can Be Better Through the (Dominant) First Language Than Through the Second Language},
   author={Hirosh, Zoya and Degani, Tamar},
