--- a/index.qmd
+++ b/index.qmd
@@ -12,12 +12,17 @@ format:
         fig-dpi: 600
         out-width: "80%"
         code-fold: true
+        code-tools: true
+        code-line-numbers: true
+        code-link: true
 ---
 
 
 ```{r}
 #| label: setup
 #| include: false
+set.seed(888)
+
 my_colours <- c("#1A85FF", "#ff2976", "#FFC20A")
 
 options(
@@ -63,10 +68,8 @@ Participants in the spa-ENG listened to `r nrow(stimuli[stimuli$group=="spa-ENG"
 
 ```{r}
 #| label: tbl-stimuli
-tab_subtitle <- md("Lexical frequency, phonological neigbourhood size, and levenshtein distance of the stimuli words.")
-
-tab_note <- md("*Note*. Median and standard deviation (*SD*) of lexical frequencies of target words (expressed in counts per million and as Zipf scores), density of higher-frequency phonological neighbourhoods of target words, and normalised Levenshtein phonological similarity between the presented and the target words.")
-
+#| tbl-cap: "Lexical frequency, phonological neigbourhood size, and levenshtein distance of the stimuli words."
+#| tbl-subcap: "Median and standard deviation (*SD*) of lexical frequencies of target words (expressed in counts per million and as Zipf scores), density of higher-frequency phonological neighbourhoods of target words, and normalised Levenshtein phonological similarity between the presented and the target words."
 stimuli %>% 
     select(group, word_1, freq_2, freq_zipf_2, nd, lv) %>% 
     group_by(group) %>% 
@@ -80,8 +83,6 @@ stimuli %>%
         )
     ) %>%
     gt(rowname_col = "group") %>% 
-    tab_header(title = md("Table 1"), subtitle = tab_subtitle) %>% 
-    tab_source_note(tab_note) %>% 
     fmt_number(freq_2_median:nd_sd) %>%
     fmt_percent(matches("lv|global")) %>% 
     tab_spanner(
@@ -344,20 +345,25 @@ stimuli %>%
 #| fig-height: 10
 stimuli %>% 
     left_join(count(., group, name = "n_total")) %>% 
-    mutate(translation = paste0(word_1, "/", word_2)) %>% 
+    mutate(
+        translation = paste0(word_1, "/", word_2),
+        group = paste0(group,  " (N = ", n_total, ")")
+    ) %>% 
     ggplot(aes(x = nd, y = reorder(translation, nd), colour = group, fill = group, label = translation)) +
     facet_wrap(~group, scales = "free_y") +
-    geom_text(size = 3, hjust = 0) +
+    geom_segment(aes(x = 0, xend = nd, y = reorder(translation, nd), yend = reorder(translation, nd))) +
+    geom_point(size = 1) +
     labs(
-        x = "Group", 
-        y = "# phonological neighbours", 
+        x = "# phonological neighbours", 
+        y = "Word"
     ) +
     scale_x_continuous(breaks = seq(0, 30, 5)) +
     theme(
         legend.position = "none",
         panel.grid.major.x = element_line(colour = "grey", linetype = "dotted"),
         axis.ticks.y = element_blank(),
-        axis.text.y = element_blank()
+        axis.title.y = element_blank(),
+        axis.text.y = element_text(size = 7, hjust = 1)
     )
 ```
 
@@ -370,11 +376,16 @@ stimuli %>%
 #| fig-height: 12
 stimuli %>% 
     left_join(count(., group, name = "n_total")) %>% 
-    mutate(group = paste0(group,  " (N = ", n_total, ")")) %>% 
+    mutate(
+        group = paste0(group,  " (N = ", n_total, ")"),
+        translation = paste(translation, "(", percent(lv, accuracy = 0.01), ")"),
+        translation_ord = reorder_within(translation, lv, group)
+    ) %>% 
     ggplot() +
-    aes(x = lv, y = reorder_within(translation, lv, group), fill = group, colour = group) +
+    aes(x = lv, y = translation_ord, fill = group, colour = group) +
     facet_wrap(~group, scales = "free_y") +
-    geom_text(aes(label = percent(lv, accuracy = 0.1)), size = 3, hjust = 0) +
+    geom_segment(aes(x = 0, xend = lv, y = translation_ord, yend = translation_ord)) +
+    geom_point(size = 1) +
     labs(
         x = "Group", 
         y = "Phonological Leveshtein distance\n(corrected for string length)",
@@ -385,7 +396,7 @@ stimuli %>%
     theme(
         legend.position = "none",
         axis.title.y = element_blank(),
-        axis.text.y = element_text(size = 7, hjust = 1),
+        axis.text.y = element_text(size = 3, hjust = 1),
         panel.grid.major.x = element_line(colour = "grey", linetype = "dotted")
     ) 
 ggsave(here("img", "lv.png"), height = 12)
@@ -463,7 +474,7 @@ stimuli %>%
     labs(
         x = "PTHN across languages", 
         y = "Number of trials", 
-        title = "Higher-frequency neighbours\n(stimuli translations)\n"
+        title = "Cross-language neighbours"
     ) +
     
     # Levenshtein
@@ -856,6 +867,19 @@ model_loos %>%
     )
 ```
 
+```{r}
+#| label: model-rocs
+model_rocs %>% 
+    bind_rows(.id = "model") %>% 
+    ggplot(aes(1-specificity, sensitivity, colour = model)) +
+    facet_wrap(~model) +
+    geom_line(aes(group = .draw), alpha = 0.1) +
+    labs(x = "1 - Specificity", y = "Sensitivity", colour = "Model") + 
+    scale_y_continuous(labels = percent) +
+    scale_x_continuous(labels = percent) +
+    theme_custom()
+
+```
 
 #### Regression coefficients
 
@@ -906,7 +930,7 @@ coefs <- fixef(fit_4) %>%
     as.data.frame() %>% 
     rownames_to_column("variable") %>% 
     clean_names() %>% 
-    mutate(across(estimate:q97_5, ~ifelse(variable=="Intercept", inv_logit_scaled(.), ./4))) %>% 
+    mutate(across(estimate:q97_5, ~logit_to_prob(., variable))) %>%
     group_split(variable) %>% 
     set_names(make_clean_names(map(., "variable"))) %>% 
     map(select, -variable) %>% 
@@ -918,10 +942,12 @@ post_draws <-  gather_draws(fit_4, `b_.*`, `sd_.*`, regex = TRUE)
 post_draws %>% 
     filter(str_detect(.variable, "b_")) %>% 
     mutate(
-        .variable_name = .variable %>% 
-            str_remove("b_") %>% 
-            factor(levels = names(str_repl), labels = str_repl),
-        .value = ifelse(str_detect(.variable, "Intercept"), inv_logit_scaled(.value), .value/4)
+        .variable_name = factor(
+            gsub("b_", "", .variable),
+            levels = names(str_repl),
+            labels = str_repl
+        ),
+        .value = logit_to_prob(.value, .variable)
     ) %>% 
     arrange(.variable) %>% 
     ggplot() +
@@ -952,100 +978,6 @@ post_draws %>%
 ```
 
 
-
-
-```{r}
-#| label: coefs-word
-empirical_means <- responses %>% 
-    group_by(group) %>% 
-    summarise(
-        successes = sum(correct, na.rm = TRUE),
-        n = n(),
-        .groups = "drop"
-    ) %>% 
-    mutate(
-        prop = prop_adj(successes, n),
-        prop_se = prop_adj_se(successes, n)
-    )
-
-empirical_accuracy <- responses %>% 
-    mutate(translation = paste0(word_1, " /", ipa_flat_1, "/ - ",  word_2, " /", ipa_flat_2, "/ - ", percent(lv, accuracy = 1))) %>% 
-    group_by(group, translation, lv) %>% 
-    summarise(
-        successes = sum(correct, na.rm = TRUE),
-        n = n(),
-        .groups = "drop"
-    ) %>% 
-    rowwise() %>% 
-    mutate(
-        prop = prop_adj(successes, n),
-        prop_se = prop_adj_se(successes, n), 
-    )
-
-fixed_intercept <- fixef(fit_4)[1 ,c(1, 3, 4)] %>% 
-    inv_logit_scaled()
-
-nd_re_words <- expand.grid(
-    translation_id = unique(fit_4$data$translation_id),
-    nd_std = 0,
-    freq_zipf_2_std = 0,
-    lv_std = 0,
-    group = NA
-)
-
-post_re <- add_epred_draws(nd_re_words, fit_4, ndraws = 50,
-                           re_formula = ~ (1 | translation_id)) %>% 
-    group_by(translation_id, nd_std, freq_zipf_2_std, lv_std, group) %>% 
-    summarise(
-        .mean = mean_qi(.epred)[,1], 
-        .lower = mean_qi(.epred)[,2],
-        .upper = mean_qi(.epred)[,3],
-        .groups = "drop"
-    ) %>% 
-    ungroup() %>% 
-    select(-c(group)) %>% 
-    left_join(select(stimuli, group, translation, translation_id, lv)) %>% 
-    mutate(translation = paste0(translation, " - ", percent(lv, accuracy = 1))) %>% 
-    left_join(select(empirical_accuracy, translation, n, prop, prop_se))
-
-post_re %>% 
-    ggplot() +
-    aes(x = .mean, y = reorder_within(translation, prop, group)) +
-    facet_wrap(~group, scales = "free_y") +
-    geom_vline(data = empirical_means, aes(xintercept = prop), size = 0.75, colour = "grey") +
-    geom_errorbar(aes(xmin = .lower, xmax = .upper), size = 0.5, colour = "grey", width = 0.5) + 
-    geom_point(aes(x = .mean), size = 0.5, colour = "grey") + 
-    geom_point(aes(x = prop, colour = group), size = 1, shape = 15) +
-    labs(
-        x = "Percentage of correct responses",
-        y = "Item",
-        title = "Observed translation accuracy",
-        subtitle = "Dots indicate proportions of correct responses, error bars indicate +/-1 SE",
-        colour = "Credible Interval (CrI)",
-        caption = "Percentages next to items indicate the Levenshtein distance between both translations."
-    ) +
-    scale_x_continuous(limits = c(0, 1), labels = percent) +
-    scale_y_reordered() +
-    theme(
-        legend.position = "none",
-        legend.key = element_rect(fill = NA, colour = NA),
-        axis.text.x = element_text(size = 7),
-        axis.text.y = element_text(size = 5, hjust = 1),
-        axis.ticks = element_blank(),
-        axis.title = element_text(size = 10),
-        axis.title.y = element_blank(),
-        panel.grid.major.x = element_line(size = 0.15, linetype = "dotted", colour = "grey"),
-        plot.caption.position = "plot",
-        plot.caption = element_text(size = 9, hjust = 0, face = "plain", margin = margin(t = unit(3, "cm"))),
-        plot.title.position = "plot",
-        plot.title = element_text(hjust = 0, size = 13),
-        plot.subtitle = element_text(hjust = 0, face = "plain", size = 13)
-    )
-
-ggsave(here("img", "accuracy.png"), height = 9, width = 10, dpi = 1000)
-```
-
-
 #### Marginal effects
 
 ```{r}
@@ -1063,21 +995,22 @@ nd <- expand.grid(
         by = 0.1
     ),
     freq_zipf_2_std = 0,
-    nd_std = scale_values(c(0, 3, 6, 10, 15, 25), fit_4$data$nd)
+    nd_std = scale_values(c(0, 3, 6), fit_4$data$nd)
 )
 
 m <- add_epred_draws(nd, fit_4, re_formula = NA, ndraws = 50) %>% 
-    mutate(nd_lab = rescale_values(nd_std, fit_4$data$nd) %>% 
-               paste0(" neighbours") %>% 
-               factor(levels = paste0(c(0, 3, 6, 10, 15, 25), " neighbours"))
+    mutate(
+        nd_lab = rescale_values(nd_std, fit_4$data$nd) %>% 
+            paste0(" neighbours") %>% 
+            factor(levels = paste0(c(0, 3, 6), " neighbours"))
     )
 
 ggplot(m, aes(x = lv_std, y = .epred)) +
     facet_wrap(~nd_lab, nrow = 1) +
     geom_line(aes(group = interaction(nd_std, .draw)),
-              colour = "grey", size = 0.75, alpha = 0.25) +
+              colour = my_colours[1], size = 0.75, alpha = 0.1) +
     geom_hline(yintercept = 0.5, colour = "grey", size = 1) +
-    stat_summary(fun = mean, geom = "line", size = 1, colour = my_colours[2]) +
+    stat_summary(fun = mean, geom = "line", size = 1, colour = my_colours[1]) +
     labs(
         x = "Phonological similarity (Levenshtein)",
         y = "P(Correct)",
@@ -1451,15 +1384,15 @@ questionnaire_model_loos %>%
 ```{r}
 #| label: tbl-questionnaire-model-coefs
 #| warning: false
-coefs <- fixef(questionnaire_fit_4) %>% 
+questionnaire_coefs <- fixef(questionnaire_fit_4) %>% 
     as.data.frame() %>% 
     rownames_to_column("variable") %>% 
     clean_names() %>% 
-    mutate(across(estimate:q97_5, ~ifelse(variable=="Intercept", inv_logit_scaled(.), ./4)))
+    mutate(across(estimate:q97_5, ~ifelse(variable=="Intercept", plogis(.), ./4)))
 
 tab_caption <- md("Estimated posterior distributions of coefficients in Model 6. A\\) Population-level effects. Distributions indicate the estimated posterior likelihood density of regression coefficients of fixed effects. Credible intervals (*CrI*), represented with increasingly lighter segmentents in the distribution indicate the range of values that contain the true value with 95\\%, 80\\%, and 50\\% probability. Black dots represent the mean of each distribution.")
 
-coefs %>% 
+questionnaire_coefs %>% 
     mutate(
         variable = variable %>% 
             str_remove("b_") %>% 
@@ -1488,16 +1421,16 @@ coefs <- fixef(questionnaire_fit_4) %>%
     as.data.frame() %>% 
     rownames_to_column("variable") %>% 
     clean_names() %>% 
-    mutate(across(estimate:q97_5, ~ifelse(variable=="Intercept", inv_logit_scaled(.), ./4))) %>% 
+    mutate(across(estimate:q97_5, ~ifelse(variable=="Intercept", inv_logit_scaled(.), ./4))) %>%
     group_split(variable) %>% 
     set_names(make_clean_names(map(., "variable"))) %>% 
     map(select, -variable) %>% 
     map(unlist)
 
-post_draws <-  gather_draws(questionnaire_fit_4, `b_.*`, `sd_.*`, regex = TRUE) 
+questionnaire_post_draws <- gather_draws(questionnaire_fit_4, `b_.*`, `sd_.*`, regex = TRUE) 
 
 # fixed effects
-post_draws %>% 
+questionnaire_post_draws %>% 
     filter(str_detect(.variable, "b_")) %>% 
     mutate(
         .variable_name = .variable %>% 
@@ -1543,19 +1476,26 @@ questionnaire_nd <- expand.grid(
         by = 0.1
     ),
     freq_zipf_2_std = 0,
-    nd_std = scale_values(c(0, 3, 6, 10, 15, 25), questionnaire_fit_4$data$nd)
+    nd_std = scale_values(c(0, 3, 6), questionnaire_fit_4$data$nd)
 )
 
-questionnaire_m <- add_epred_draws(nd, questionnaire_fit_4, re_formula = NA, ndraws = 50) %>% 
-    mutate(nd_lab = rescale_values(nd_std, questionnaire_fit_4$data$nd) %>% 
-               paste0(" neighbours") %>% 
-               factor(levels = paste0(c(0, 3, 6, 10, 15, 25), " neighbours"))
+questionnaire_m <- add_epred_draws(
+    questionnaire_nd,
+    questionnaire_fit_4, 
+    re_formula = NA,
+    ndraws = 50
+) %>% 
+    mutate(
+        nd_lab = rescale_values(nd_std, questionnaire_fit_4$data$nd) %>% 
+            round(2) %>% 
+            paste0(" neighbours") %>% 
+            factor(levels = paste0(c(0, 3, 6), " neighbours"))
     )
 
 ggplot(questionnaire_m, aes(x = lv_std, y = .epred)) +
     facet_wrap(~nd_lab, nrow = 1) +
     geom_line(aes(group = interaction(nd_std, .draw)),
-              colour = "grey", size = 0.75, alpha = 0.25) +
+              colour = my_colours[2], size = 0.75, alpha = 0.1) +
     geom_hline(yintercept = 0.5, colour = "grey", size = 1) +
     stat_summary(fun = mean, geom = "line", size = 1, colour = my_colours[2]) +
     labs(
@@ -1573,18 +1513,65 @@ ggplot(questionnaire_m, aes(x = lv_std, y = .epred)) +
 
 # Joint analyses
 
+## Regression coefficients
+
+```{r}
+#| label: fig-joint-coefs
+#| fig-height: 5
+#| fig-width: 8.5
+#| fig-cap: "Estimated posterior distributions of coefficients in Model 4. A\\) Population-level effects. Distributions indicate the estimated posterior likelihood density of regression coefficients of fixed effects. Credible intervals (*CrI*), represented with increasingly lighter segmentents in the distribution indicate the range of values that contain the true value with 95\\%, 80\\%, and 50\\% probability. Black dots represent the mean of each distribution. B\\) Participant\\-level coefficient variability. The model estimated participant\\-level coefficients to account for the dependency between responses from the same participant. Distributions in this panel indicate the estimated variability across coefficients from different participants, expressed as standard deviations (*SD*). C\\) Correlation between participant\\-level effects. The model allowed participant-level coefficients to co\\-vary. This panel represents the Pearson correlations between each pair of coefficients, expressed as the mean of the posterior distribution of each  estimated correlation."
+# fixed effects
+list("Study 1" = post_draws, "Study 2" = questionnaire_post_draws) %>% 
+    bind_rows(.id = "study") %>% 
+    filter(str_detect(.variable, "b_")) %>% 
+    mutate(
+        .variable_name = factor(
+            gsub("b_", "", .variable),
+            levels = names(str_repl),
+            labels = str_repl
+        ),
+        .value = logit_to_prob(.value, .variable)
+    ) %>% 
+    arrange(.variable) %>% 
+    ggplot(aes(.value, fct_rev(.variable_name), fill = study, colour = study)) +
+    stat_slab(size = 1.25, position = position_nudge(y = 0.15), fill = NA, scale = 0.5) +
+    stat_pointinterval(position = position_dodge(width = 0.25), .width = 0.95, size = 1.35) +
+    scale_fill_manual(values = my_colours, na.translate = FALSE) +
+    scale_x_continuous(labels = ~percent(., accuracy = 1), breaks = seq(-1, 1, 0.1)) +
+    labs(
+        x = "P(Correct)", 
+        y = "Posterior probability density",
+        fill = "Study",
+        colour = "Study"
+    ) +
+    theme(
+        legend.position = "top",
+        legend.title = element_blank(),
+        axis.title.y = element_blank(),
+        axis.text = element_text(colour = "black", hjust = 1, size = 12),
+        axis.ticks.y = element_blank(),
+        panel.grid.major.x = element_line(colour = "grey", size = 0.5, linetype = "dotted")
+    ) 
+
+```
+
+
+## Marginal effects
+
+### Population-level marginal effects
 
 ```{r}
 #| label: fig-joint-marginal-effects
 #| fig-width: 9
 #| fig-height: 4
 #| fig-cap: "Expected mean posterior predictions from Model 4. A) Population-level predictions: the X-axis and the Y-axis represent the PTHN score (in standard deviations from the mean) and the probability of correct translation, respectively. We simulated 300 observations from the posterior distribution of the model: 100 simulations for translations with no similarity (0% Levenshtein), 100 simulations for translations with mean accuracy (20.51% Levenshtein), and 100 simulations for translations with the maximum observed accuracy (83.33% Levenshtein). We did this across the range of values of the PTHN scores. For each simulation, we drew a single sample from the posterior distribution of each coefficient. Each simulation is depicted in the graph as a line: pink for minimum similarity translations, blue for hight similarity translations, and yellow for maximum similarity translations. Black, thick lines indicate the expected mean value of the posterior predictions of the model for each condition. The dispersion of the lines indicates the uncertainty of our predictions. We computed these posterior predictions for each group of participants, and plot tem in separate panels."
-
+#| warnings: false
+#| messages: false
 bind_rows(list("Study 1" = m, "Study 2" = questionnaire_m), .id = "study") %>% 
     ggplot(aes(x = lv_std, y = .epred, colour = study)) +
     facet_wrap(~nd_lab, nrow = 1) +
     geom_line(aes(group = interaction(nd_std, .draw, study)),
-              size = 0.75, alpha = 0.05) +
+              size = 0.75, alpha = 0.1) +
     geom_hline(yintercept = 0.5, size = 1) +
     stat_summary(fun = mean, geom = "line", size = 1) +
     labs(
@@ -1595,7 +1582,400 @@ bind_rows(list("Study 1" = m, "Study 2" = questionnaire_m), .id = "study") %>%
     scale_y_continuous(labels = percent) +
     theme(
         legend.position = "none",
-        axis.text.x = element_text(size = 10),
         plot.title = element_blank()
     )
 ```
+
+
+### Group-level marginal effects
+
+#### Word-level marginal effects
+
+::: {.panel-tabset}
+
+##### Catalan to English (cat-ENG)
+
+```{r}
+#| label: fig-coefs-word-cateng
+#| fig-cap: "Word-level model posterior predicted and observed mean accuracy. Intervals represent the 95% posterior credible interval of the accuracy each item was responded to in Study 1 (blue) and Study 2 (red). dots indicate the observed proportion of participants that translated the word correctly."
+#| fig-height: 13
+#| fig-width: 5
+#| warnings: false
+#| messages: false
+empirical_means <- list("Study 1" = responses, "Study 2" = questionnaire_responses) %>% 
+    bind_rows(.id = "study") %>% 
+    group_by(study, group) %>% 
+    summarise(successes = sum(correct, na.rm = TRUE), n = n(), .groups = "drop") %>% 
+    mutate(
+        prop = prop_adj(successes, n),
+        prop_se = prop_adj_se(successes, n)
+    )
+
+empirical_accuracy <- list("Study 1" = responses, "Study 2" = questionnaire_responses) %>% 
+    bind_rows(.id = "study") %>% 
+    mutate(translation = paste0(translation, " (", percent(lv, accuracy = 1), ")")) %>% 
+    group_by(study, group, translation, lv) %>% 
+    summarise(prop = mean(correct), .groups = "drop")
+
+nd_re_words <- expand.grid(
+    translation_id = unique(fit_4$data$translation_id),
+    nd_std = 0,
+    freq_zipf_2_std = 0,
+    lv_std = 0,
+    group = NA
+)
+
+questionnaire_nd_re_words <- expand.grid(
+    translation_id = unique(questionnaire_fit_4$data$translation_id),
+    nd_std = 0,
+    freq_zipf_2_std = 0,
+    lv_std = 0,
+    group = NA
+)
+
+post_re <- add_epred_draws(nd_re_words, fit_4, ndraws = 50, re_formula = ~ (1 | translation_id))
+questionnaire_post_re <- add_epred_draws(questionnaire_nd_re_words, questionnaire_fit_4, ndraws = 50, re_formula = ~ (1 | translation_id))
+
+post_re_join <- list("Study 1" = post_re, "Study 2" = questionnaire_post_re) %>% 
+    bind_rows(.id = "study") %>% 
+    group_by(study, translation_id, nd_std, freq_zipf_2_std, lv_std, group) %>% 
+    summarise(
+        .mean = mean_qi(.epred)[,1], 
+        .lower = mean_qi(.epred)[,2],
+        .upper = mean_qi(.epred)[,3],
+        .groups = "drop"
+    ) %>% 
+    ungroup() %>% 
+    select(-c(group)) %>% 
+    left_join(select(stimuli, group, translation, translation_id, lv)) %>% 
+    mutate(
+        translation = paste0(translation, " (", percent(lv, accuracy = 1), ")"),
+        translation_ord = reorder_within(translation, lv, group),
+        group = factor(group, levels = c("cat-ENG", "spa-ENG", "cat-SPA"), ordered = TRUE)
+    ) %>% 
+    left_join(select(empirical_accuracy, study, group, translation, prop)) 
+
+post_re_join %>% 
+    filter(group=="cat-ENG") %>% 
+    ggplot(aes(x = .mean, y = translation_ord, colour = study, fill = study)) +
+    geom_errorbar(aes(xmin = .lower, xmax = .upper),
+                  size = 0.5, width = 0,
+                  position = position_dodge(width = 0.5)) + 
+    geom_point(aes(x = prop), size = 2, shape = 18,
+               position = position_dodge(width = 0.5)) +
+    geom_smooth(aes(group = study), orientation = "y", alpha = 0.1, size = 0.5,
+                method = "glm", method.args = list(family = "binomial")) +
+    labs(
+        x = "Percentage of correct responses",
+        y = "Item",
+        colour = "Study",
+        fill = "Study"
+    ) +
+    scale_x_continuous(limits = c(0, 1), labels = percent) +
+    scale_y_reordered() +
+    theme(
+        legend.position = "top",
+        legend.key = element_rect(fill = NA, colour = NA),
+        axis.text.x = element_text(size = 7),
+        axis.text.y = element_text(size = 5, hjust = 1),
+        axis.ticks = element_blank(),
+        axis.title = element_text(size = 10),
+        axis.title.y = element_blank(),
+        panel.grid.major.x = element_line(size = 0.15, linetype = "dotted", colour = "grey"),
+        plot.caption.position = "plot",
+        plot.caption = element_text(size = 9, hjust = 0, face = "plain", margin = margin(t = unit(3, "cm"))),
+        plot.title.position = "plot",
+        plot.title = element_text(hjust = 0, size = 13),
+        plot.subtitle = element_text(hjust = 0, face = "plain", size = 13)
+    )
+```
+
+##### Spanish to English (spa-ENG)
+
+```{r}
+#| label: fig-coefs-word-spaeng
+#| fig-cap: "Word-level model posterior predicted and observed mean accuracy. Intervals represent the 95% posterior credible interval of the accuracy each item was responded to in Study 1 (blue) and Study 2 (red). dots indicate the observed proportion of participants that translated the word correctly."
+#| fig-height: 13
+#| fig-width: 5
+#| warnings: false
+#| messages: false
+post_re_join %>% 
+    filter(group=="spa-ENG") %>% 
+    ggplot(aes(x = .mean, y = translation_ord, colour = study, fill = study)) +
+    geom_errorbar(aes(xmin = .lower, xmax = .upper),
+                  size = 0.75, width = 0,
+                  position = position_dodge(width = 0.5)) + 
+    geom_point(aes(x = prop), size = 1.25, shape = 18,
+               position = position_dodge(width = 0.5)) +
+    geom_smooth(aes(group = study), orientation = "y", alpha = 0.1, size = 0.5,
+                method = "glm", method.args = list(family = "binomial")) +
+     labs(
+        x = "Percentage of correct responses",
+        y = "Item",
+        colour = "Study",
+        fill = "Study"
+    ) +
+    scale_x_continuous(limits = c(0, 1), labels = percent) +
+    scale_y_reordered() +
+    theme(
+        legend.position = "top",
+        legend.key = element_rect(fill = NA, colour = NA),
+        axis.text.x = element_text(size = 7),
+        axis.text.y = element_text(size = 5, hjust = 1),
+        axis.ticks = element_blank(),
+        axis.title = element_text(size = 10),
+        axis.title.y = element_blank(),
+        panel.grid.major.x = element_line(size = 0.15, linetype = "dotted", colour = "grey"),
+        plot.caption.position = "plot",
+        plot.caption = element_text(size = 9, hjust = 0, face = "plain", margin = margin(t = unit(3, "cm"))),
+        plot.title.position = "plot",
+        plot.title = element_text(hjust = 0, size = 13),
+        plot.subtitle = element_text(hjust = 0, face = "plain", size = 13)
+    )
+```
+
+##### Catalan to Spanish (cat-SPA)
+
+```{r}
+#| label: fig-coefs-word-catspa
+#| fig-cap: "Word-level model posterior predicted and observed mean accuracy. Intervals represent the 95% posterior credible interval of the accuracy each item was responded to in Study 1 (blue) and Study 2 (red). dots indicate the observed proportion of participants that translated the word correctly."
+#| fig-height: 13
+#| fig-width: 5
+#| warnings: false
+#| messages: false
+post_re_join %>% 
+    filter(group=="spa-ENG") %>% 
+    ggplot(aes(x = .mean, y = translation_ord, colour = study, fill = study)) +
+    geom_errorbar(aes(xmin = .lower, xmax = .upper),
+                  size = 0.75, width = 0,
+                  position = position_dodge(width = 0.5)) + 
+    geom_point(aes(x = prop), size = 1.25, shape = 18,
+               position = position_dodge(width = 0.5)) +
+    geom_smooth(aes(group = study), orientation = "y", alpha = 0.1, size = 0.5,
+                method = "glm", method.args = list(family = binomial)) +
+    labs(
+        x = "Percentage of correct responses",
+        y = "Item",
+        colour = "Study",
+        fill = "Study"
+    ) +
+    scale_x_continuous(limits = c(0, 1), labels = percent) +
+    scale_y_reordered() +
+    theme(
+        legend.position = "top",
+        legend.key = element_rect(fill = NA, colour = NA),
+        axis.text.x = element_text(size = 7),
+        axis.text.y = element_text(size = 5, hjust = 1),
+        axis.ticks = element_blank(),
+        axis.title = element_text(size = 10),
+        axis.title.y = element_blank(),
+        panel.grid.major.x = element_line(size = 0.15, linetype = "dotted", colour = "grey"),
+        plot.caption.position = "plot",
+        plot.caption = element_text(size = 9, hjust = 0, face = "plain", margin = margin(t = unit(3, "cm"))),
+        plot.title.position = "plot",
+        plot.title = element_text(hjust = 0, size = 13),
+        plot.subtitle = element_text(hjust = 0, face = "plain", size = 13)
+    )
+```
+
+:::
+
+
+#### Participant-level marginal effects
+
+::: {.panel-tabset}
+
+##### Catalan to English (cat-ENG)
+
+```{r}
+#| label: fig-coefs-participant-cateng
+#| fig-cap: "Participant-level model posterior predicted and observed mean accuracy. Intervals represent the 95% posterior credible interval of the accuracy of each participant from Study 1 (blue) and Study 2 (red). Dots indicate the observed proportion of words participants translated the correctly."
+#| fig-height: 8
+#| fig-width: 5
+#| warnings: false
+#| messages: false
+empirical_means <- list("Study 1" = responses, "Study 2" = questionnaire_responses) %>% 
+    bind_rows(.id = "study") %>% 
+    group_by(study, group) %>% 
+    summarise(successes = sum(correct, na.rm = TRUE), n = n(), .groups = "drop") %>% 
+    mutate(
+        prop = prop_adj(successes, n),
+        prop_se = prop_adj_se(successes, n)
+    )
+
+empirical_accuracy <- list("Study 1" = responses, "Study 2" = questionnaire_responses) %>% 
+    bind_rows(.id = "study") %>% 
+    mutate(translation = paste0(translation, " (", percent(lv, accuracy = 1), ")")) %>% 
+    group_by(study, group, participant_id) %>% 
+    summarise(prop = mean(correct), .groups = "drop")
+
+nd_re_participants <- expand.grid(
+    participant_id = unique(fit_4$data$participant_id),
+    nd_std = 0,
+    freq_zipf_2_std = 0,
+    lv_std = 0
+)
+
+questionnaire_nd_re_participants <- expand.grid(
+    participant_id = unique(questionnaire_fit_4$data$participant_id),
+    nd_std = 0,
+    freq_zipf_2_std = 0,
+    lv_std = 0
+)
+
+participants_joint <- list(
+    "Study 1" = select(participants, participant_id, group),
+    "Study 2" = select(questionnaire_participants, participant_id, group)
+) %>% 
+    bind_rows(.id = "study")
+
+post_re <- add_epred_draws(
+    nd_re_participants, 
+    fit_4, 
+    ndraws = 50,
+    re_formula = ~ (1 | participant_id)
+)
+
+questionnaire_post_re <- add_epred_draws(
+    questionnaire_nd_re_participants, 
+    questionnaire_fit_4,
+    ndraws = 50, 
+    re_formula = ~ (1 | participant_id)
+)
+
+post_re_join <- list("Study 1" = post_re, "Study 2" = questionnaire_post_re) %>% 
+    bind_rows(.id = "study") %>% 
+    group_by(study, participant_id) %>% 
+    summarise(
+        .mean = mean_qi(.epred)[,1], 
+        .lower = mean_qi(.epred)[,2],
+        .upper = mean_qi(.epred)[,3],
+        .groups = "drop"
+    ) %>% 
+    ungroup() %>% 
+    left_join(select(participants_joint, participant_id, group)) %>% 
+    mutate(group = factor(group, levels = c("cat-ENG", "spa-ENG", "cat-SPA"), ordered = TRUE)) %>% 
+    left_join(select(empirical_accuracy, study, group, participant_id, prop)) 
+
+post_re_join %>% 
+    mutate(participant_id = str_trunc(participant_id, 10)) %>% 
+    filter(group=="cat-ENG") %>% 
+    ggplot(aes(x = .mean, y = participant_id, colour = study, fill = study)) +
+    facet_wrap(~study, scales = "free_y") +
+    geom_errorbar(aes(xmin = .lower, xmax = .upper),
+                  size = 1, width = 0,
+                  position = position_dodge(width = 0.5)) + 
+    geom_point(aes(x = prop), size = 2, shape = 18,
+               position = position_dodge(width = 0.5)) +
+    labs(
+        x = "Percentage of correct responses",
+        y = "Participant",
+        colour = "Study",
+        fill = "Study"
+    ) +
+    scale_x_continuous(limits = c(0, 1), labels = percent) +
+    scale_y_reordered() +
+    theme(
+        legend.position = "none",
+        legend.key = element_rect(fill = NA, colour = NA),
+        axis.text.x = element_text(size = 7),
+        axis.text.y = element_text(size = 5, hjust = 1),
+        axis.ticks = element_blank(),
+        axis.title = element_text(size = 10),
+        axis.title.y = element_blank(),
+        panel.grid.major.x = element_line(size = 0.15, linetype = "dotted", colour = "grey"),
+        plot.caption.position = "plot",
+        plot.caption = element_text(size = 9, hjust = 0, face = "plain", margin = margin(t = unit(3, "cm"))),
+        plot.title.position = "plot",
+        plot.title = element_text(hjust = 0, size = 13),
+        plot.subtitle = element_text(hjust = 0, face = "plain", size = 13)
+    )
+```
+
+##### Spanish to English (spa-ENG)
+
+```{r}
+#| label: fig-coefs-participant-spaeng
+#| fig-cap: "Participant-level model posterior predicted and observed mean accuracy. Intervals represent the 95% posterior credible interval of the accuracy of each participant from Study 1 (blue) and Study 2 (red). Dots indicate the observed proportion of words participants translated the correctly."
+#| fig-height: 8
+#| fig-width: 5
+#| warnings: false
+#| messages: false
+post_re_join %>% 
+    filter(group=="spa-ENG") %>% 
+    ggplot(aes(x = .mean, y = participant_id, colour = study, fill = study)) +
+    facet_wrap(~study, scales = "free_y") +
+    geom_errorbar(aes(xmin = .lower, xmax = .upper),
+                  size = 1, width = 0,
+                  position = position_dodge(width = 0.5)) + 
+    geom_point(aes(x = prop), size = 2, shape = 18,
+               position = position_dodge(width = 0.5)) +
+    labs(
+        x = "Percentage of correct responses",
+        y = "Participant",
+        colour = "Study",
+        fill = "Study"
+    ) +
+    scale_x_continuous(limits = c(0, 1), labels = percent) +
+    scale_y_reordered() +
+    theme(
+        legend.position = "none",
+        legend.key = element_rect(fill = NA, colour = NA),
+        axis.text.x = element_text(size = 7),
+        axis.text.y = element_text(size = 5, hjust = 1),
+        axis.ticks = element_blank(),
+        axis.title = element_text(size = 10),
+        axis.title.y = element_blank(),
+        panel.grid.major.x = element_line(size = 0.15, linetype = "dotted", colour = "grey"),
+        plot.caption.position = "plot",
+        plot.caption = element_text(size = 9, hjust = 0, face = "plain", margin = margin(t = unit(3, "cm"))),
+        plot.title.position = "plot",
+        plot.title = element_text(hjust = 0, size = 13),
+        plot.subtitle = element_text(hjust = 0, face = "plain", size = 13)
+    )
+```
+
+##### Catalan to Spanish (cat-SPA)
+
+```{r}
+#| label: fig-coefs-participant-catspa
+#| fig-cap: "Participant-level model posterior predicted and observed mean accuracy. Intervals represent the 95% posterior credible interval of the accuracy of each participant from Study 1 (blue) and Study 2 (red). Dots indicate the observed proportion of words participants translated the correctly."
+#| fig-height: 8
+#| fig-width: 5
+#| warnings: false
+#| messages: false
+post_re_join %>% 
+    filter(group=="cat-SPA") %>% 
+    ggplot(aes(x = .mean, y = participant_id, colour = study, fill = study)) +
+    facet_wrap(~study, scales = "free_y") +
+    geom_errorbar(aes(xmin = .lower, xmax = .upper),
+                  size = 1, width = 0,
+                  position = position_dodge(width = 0.5)) + 
+    geom_point(aes(x = prop), size = 2, shape = 18,
+               position = position_dodge(width = 0.5)) +
+    labs(
+        x = "Percentage of correct responses",
+        y = "Participant",
+        colour = "Study",
+        fill = "Study"
+    ) +
+    scale_x_continuous(limits = c(0, 1), labels = percent) +
+    scale_y_reordered() +
+    theme(
+        legend.position = "none",
+        legend.key = element_rect(fill = NA, colour = NA),
+        axis.text.x = element_text(size = 7),
+        axis.text.y = element_text(size = 5, hjust = 1),
+        axis.ticks = element_blank(),
+        axis.title = element_text(size = 10),
+        axis.title.y = element_blank(),
+        panel.grid.major.x = element_line(size = 0.15, linetype = "dotted", colour = "grey"),
+        plot.caption.position = "plot",
+        plot.caption = element_text(size = 9, hjust = 0, face = "plain", margin = margin(t = unit(3, "cm"))),
+        plot.title.position = "plot",
+        plot.title = element_text(hjust = 0, size = 13),
+        plot.subtitle = element_text(hjust = 0, face = "plain", size = 13)
+    )
+```
+
+:::
